k8_files/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
          - containerPort: 5432
        volumeMounts:
          - name:  postgres-storage
            mountPath: /var/lib/postgresql/data #FolderPath inside of our postgres container. Data saved under this location will be persistent. Default location for postgres.
            subPath: postgres
      volumes: #Creation of PVC. This section, "Volumes", request to K8s, for a persistent Volume that we've specified.
        - name:  postgres-storage #name should be the SAME as volumeMounts, name.
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
