k8_files/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template: #Pod Template 
    metadata:
      labels:
        component: redis
    spec: 
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
