k8_files/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: web #Selector watches the pods, attached to it.
  ports: 
    - port: 3000
      targetPort: 3000
